--- a/app.json
+++ b/app.json
@@ -13,5 +13,5 @@
   "style": "v2",
   "componentFramework": "glass-easel",
   "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
+  "component": true
 }
