添加warshall算法，传递闭包的初步页面和控制台显示

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/truthtable/truthtable",
     "pages/fun3/fun3",
     "pages/fun4/fun4",
-    "pages/find/find"
+    "pages/find/find",
+    "pages/closure/closure"
   ],
   "window": {
     "navigationBarTextStyle": "black",
