增加dijkstra求最短路

--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "pages/fun4/fun4",
     "pages/find/find",
     "pages/closure/closure",
+    "pages/shortest/shortest",
     "pages/set/set",
     "pages/set1/set"
   ],
