--- a/project.config.json
+++ b/project.config.json
@@ -19,7 +19,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "3.6.1",
-  "appid": "wxe042e5cbb0761dba",
+  "appid": "wx1ff8f294ccdcfa00",
   "projectname": "lisan",
   "condition": {},
   "editorSetting": {
