--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/closure/closure",
     "pages/shortest/shortest",
     "pages/set/set",
-    "pages/set1/set"
+    "pages/set1/set",
+    "pages/test/test"
   ],
   "window": {
     "navigationBarTextStyle": "black",
