--- a/app.json
+++ b/app.json
@@ -17,5 +17,8 @@
     "navigationBarBackgroundColor": "#F8F8F8",
     "backgroundColor": "#F8F8F8"
   },
-  "usingComponents": {}
+  "usingComponents": {},
+  "resolveAlias": {
+    "@/*":"/*"
+  }
 }
