--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,6 +1,6 @@
 {
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "projectname": "lisan",
+  "projectname": "%E7%A6%BB%E6%95%A3%E6%95%B0%E5%AD%A6%E5%8F%AF%E8%A7%86%E5%8C%96",
   "setting": {
     "compileHotReLoad": true,
     "skylineRenderEnable": true
