--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,6 +1,6 @@
 {
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "projectname": "%E7%A6%BB%E6%95%A3%E6%95%B0%E5%AD%A6%E5%8F%AF%E8%A7%86%E5%8C%96",
+  "projectname": "%25E7%25A6%25BB%25E6%2595%25A3%25E6%2595%25B0%25E5%25AD%25A6%25E5%258F%25AF%25E8%25A7%2586%25E5%258C%2596",
   "setting": {
     "compileHotReLoad": true,
     "skylineRenderEnable": true
