feat: *exe组件封装 *题目展示页面完成

--- a/project.config.json
+++ b/project.config.json
@@ -30,5 +30,6 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wxe042e5cbb0761dba"
+  "appid": "wxe042e5cbb0761dba",
+  "cloudfunctionRoot": "test/"
 }
